# Exiletrade

./: .gitignore  CHANGELOG.md  README.md  build.js  build_resources.js  gulpfile.js  package-lock.json  package.json  whisper_injection.js
src/: package.json
src/inject/: control_panel.html  hotkey.js  hotkeys.js  index.js  menu.html  menu.js  resource.js  scrollbar.css  settings.html  settings.js  toggle_show.js  whisper.js
src/modules/: package.json
src/modules/windowman/: CMakeLists.txt  binding.cpp  index.js  package.json  windowman.c  windowman.h
